--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ li {
   display: flex;
 }
 .header {
-  padding: 16px var(--side-padding);
+  padding: 15px var(--side-padding);
   background: var(--bg-dark);
   align-items: center;
   justify-content: space-between;
@@ -53,7 +53,7 @@ li {
 }
 
 .section {
-  padding: 80px var(--side-padding);
+  padding: 50px var(--side-padding) 120px var(--side-padding);
 }
 
 .hero {
@@ -98,4 +98,77 @@ li {
   background: var(--hero-secondary);
   display: grid;
   place-items: center;
+}
+
+.info {
+  color: var(--quote-text);
+  text-align: center;
+}
+.info-header {
+  font-weight: 900;
+  font-size: 36px;
+}
+.info-cards {
+  justify-content: center;
+  gap: 30px;
+  padding-top: 40px;
+}
+.info-card {
+  width: 150px;
+}
+.info-img-wrapper {
+  height: 150px;
+  border: 2px solid var(--call-to-action);
+  border-radius: 10px;
+  margin-bottom: 10px;
+  box-sizing: border-box;
+}
+.quote {
+  background: var(--bg-quote);
+}
+
+.quote p {
+  padding-left: 60px;
+  padding-right: 60px;
+}
+
+.quote-text {
+  font-size: 36px;
+  font-style: italic;
+  font-weight: 100;
+}
+
+.quote-author {
+  text-align: right;
+  font-weight: 700;
+}
+
+.cta-wrapper {
+  justify-content: space-between;
+  background: var(--call-to-action);
+  padding: 30px 120px;
+  border-radius: 10px;
+}
+
+.cta-main {
+  color: var(--hero-text);
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.cta-sub {
+  color: var(--hero-secondary);
+  font-weight: 300;
+}
+
+.cta-text {
+  flex-direction: column;
+}
+
+.btn {
+  border: 1px solid var(--hero-text);
+}
+
+* {
+  border: 1px solid red;
 }
